Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...91626a8](https://github.com/cri-o/cri-o/compare/v1.23.0...91626a824927f98a10c14752b7d209cb36f7ea08) on Wed, 30 Mar 2022 05:59:24 UTC.
+[v1.23.0...7735eb6](https://github.com/cri-o/cri-o/compare/v1.23.0...7735eb65122b69c5ab297c832d3295d6d6ab6ca9) on Wed, 30 Mar 2022 14:50:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz)
-- [cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum)
-- [cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz)
-- [cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum)
+- [cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz)
+- [cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum)
+- [cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz)
+- [cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -53,6 +53,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   the OCI Spec according to the corresponding CDI device specifications. Please refer to
   https://github.com/container-orchestrated-devices/container-device-interface for more
   info about CDI. ([#5571](https://github.com/cri-o/cri-o/pull/5571), [@klihub](https://github.com/klihub))
+ - Updated CNI plugins to v1.1.1. ([#5766](https://github.com/cri-o/cri-o/pull/5766), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
  - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
@@ -90,6 +91,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/intel-go/cpuid: [2aa7292](https://github.com/intel-go/cpuid/tree/2aa7292)
 - github.com/kaey/framebuffer: [7b38548](https://github.com/kaey/framebuffer/tree/7b38548)
 - github.com/mattn/go-tty: [v0.0.3](https://github.com/mattn/go-tty/tree/v0.0.3)
+- github.com/networkplumbing/go-nft: [v0.2.0](https://github.com/networkplumbing/go-nft/tree/v0.2.0)
 - github.com/onsi/ginkgo/v2: [v2.1.3](https://github.com/onsi/ginkgo/v2/tree/v2.1.3)
 - github.com/orangecms/go-framebuffer: [a0700d9](https://github.com/orangecms/go-framebuffer/tree/a0700d9)
 - github.com/pborman/getopt/v2: [v2.1.0](https://github.com/pborman/getopt/v2/tree/v2.1.0)
@@ -107,7 +109,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ### Changed
 - github.com/anmitsu/go-shlex: [648efa6 → 38f4b40](https://github.com/anmitsu/go-shlex/compare/648efa6...38f4b40)
 - github.com/container-orchestrated-devices/container-device-interface: [f99e8b6 → e545712](https://github.com/container-orchestrated-devices/container-device-interface/compare/f99e8b6...e545712)
+- github.com/containernetworking/plugins: [v1.0.1 → v1.1.1](https://github.com/containernetworking/plugins/compare/v1.0.1...v1.1.1)
 - github.com/containers/image/v5: [v5.16.1 → v5.17.0](https://github.com/containers/image/v5/compare/v5.16.1...v5.17.0)
+- github.com/cri-o/ocicni: [b388448 → v0.3.0](https://github.com/cri-o/ocicni/compare/b388448...v0.3.0)
 - github.com/docker/docker: [v20.10.9+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.9...v20.10.11)
 - github.com/frankban/quicktest: [v1.11.3 → v1.13.1](https://github.com/frankban/quicktest/compare/v1.11.3...v1.13.1)
 - github.com/go-logr/logr: [v1.2.0 → v1.2.1](https://github.com/go-logr/logr/compare/v1.2.0...v1.2.1)
@@ -115,6 +119,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/insomniacslk/dhcp: [cc9239a → 7d93572](https://github.com/insomniacslk/dhcp/compare/cc9239a...7d93572)
 - github.com/kr/pretty: [v0.2.1 → v0.3.0](https://github.com/kr/pretty/compare/v0.2.1...v0.3.0)
 - github.com/manifoldco/promptui: [v0.8.0 → v0.9.0](https://github.com/manifoldco/promptui/compare/v0.8.0...v0.9.0)
+- github.com/onsi/gomega: [v1.17.0 → v1.19.0](https://github.com/onsi/gomega/compare/v1.17.0...v1.19.0)
 - github.com/opencontainers/runc: [v1.0.2 → v1.0.3](https://github.com/opencontainers/runc/compare/v1.0.2...v1.0.3)
 - github.com/pierrec/lz4/v4: [v4.0.3 → v4.1.11](https://github.com/pierrec/lz4/v4/compare/v4.0.3...v4.1.11)
 - github.com/rogpeppe/go-internal: [v1.8.0 → 86f73c5](https://github.com/rogpeppe/go-internal/compare/v1.8.0...86f73c5)
@@ -124,9 +129,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - go.opentelemetry.io/otel/trace: v1.2.0 → v1.3.0
 - go.opentelemetry.io/otel: v1.2.0 → v1.3.0
 - golang.org/x/mod: v0.4.2 → v0.5.1
-- golang.org/x/net: e898025 → 4f30a5c
-- golang.org/x/sys: 751e447 → 97ca703
-- golang.org/x/term: 6886f2d → 140adaa
+- golang.org/x/net: e898025 → 27dd868
+- golang.org/x/sys: 751e447 → 1d35b9e
+- golang.org/x/term: 6886f2d → 03fcf44
 - google.golang.org/grpc: v1.42.0 → v1.43.0
 - mvdan.cc/sh/v3: v3.3.1 → v3.4.3
 
