--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...7735eb6](https://github.com/cri-o/cri-o/compare/v1.23.0...7735eb65122b69c5ab297c832d3295d6d6ab6ca9) on Wed, 30 Mar 2022 14:53:11 UTC.
+[v1.23.0...ab06558](https://github.com/cri-o/cri-o/compare/v1.23.0...ab065581356e9dbe22d1f0d5ed5fc1d070472a05) on Tue, 05 Apr 2022 07:31:13 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz)
-- [cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum)
-- [cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz)
-- [cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7735eb65122b69c5ab297c832d3295d6d6ab6ca9.tar.gz.sha256sum)
+- [cri-o.amd64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz)
+- [cri-o.amd64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz.sha256sum)
+- [cri-o.arm64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz)
+- [cri-o.arm64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ab065581356e9dbe22d1f0d5ed5fc1d070472a05.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -62,6 +62,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
  - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5579](https://github.com/cri-o/cri-o/pull/5579), [@klihub](https://github.com/klihub))
+ - Fix a segfault when multiple container stops come in for the same container ([#5756](https://github.com/cri-o/cri-o/pull/5756), [@haircommander](https://github.com/haircommander))
  - Fix an issue where protobuf panics when serializing ListContainer and ListPodSandbox calls ([#5606](https://github.com/cri-o/cri-o/pull/5606), [@haircommander](https://github.com/haircommander))
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
  - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
