--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...f544f91](https://github.com/cri-o/cri-o/compare/v1.23.0...f544f91eef86ca5affcfd1b82104fa6f409a4ab0) on Tue, 05 Apr 2022 14:22:55 UTC.
+[v1.23.0...3d25563](https://github.com/cri-o/cri-o/compare/v1.23.0...3d25563bb561a4a2295982ec62510f12b4fc4e42) on Wed, 06 Apr 2022 09:22:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz)
-- [cri-o.amd64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz.sha256sum)
-- [cri-o.arm64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz)
-- [cri-o.arm64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f544f91eef86ca5affcfd1b82104fa6f409a4ab0.tar.gz.sha256sum)
+- [cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz)
+- [cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum)
+- [cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz)
+- [cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -76,6 +76,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
  - Inherits storage configs from storage.conf if crio config does not set. ([#5520](https://github.com/cri-o/cri-o/pull/5520), [@QiWang19](https://github.com/QiWang19))
  - Update go to 1.17 in go.mod ([#5577](https://github.com/cri-o/cri-o/pull/5577), [@QiWang19](https://github.com/QiWang19))
+ - Updated default pause image to point to new location `registry.k8s.io/pause:3.6` ([#5777](https://github.com/cri-o/cri-o/pull/5777), [@ameukam](https://github.com/ameukam))
 
 ## Dependencies
 
