--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...3d25563](https://github.com/cri-o/cri-o/compare/v1.23.0...3d25563bb561a4a2295982ec62510f12b4fc4e42) on Wed, 06 Apr 2022 09:22:00 UTC.
+[v1.23.0...4db8e81](https://github.com/cri-o/cri-o/compare/v1.23.0...4db8e81a5ae19fa729a00e5788833e8e38b0e880) on Thu, 07 Apr 2022 15:49:20 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz)
-- [cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum)
-- [cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz)
-- [cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3d25563bb561a4a2295982ec62510f12b4fc4e42.tar.gz.sha256sum)
+- [cri-o.amd64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz)
+- [cri-o.amd64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz.sha256sum)
+- [cri-o.arm64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz)
+- [cri-o.arm64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4db8e81a5ae19fa729a00e5788833e8e38b0e880.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -69,6 +69,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix vm containers couldn't restore after cri-o restart ([#5574](https://github.com/cri-o/cri-o/pull/5574), [@gozssky](https://github.com/gozssky))
  - Fix zsh completion generation. ([#5586](https://github.com/cri-o/cri-o/pull/5586), [@klihub](https://github.com/klihub))
  - Fixed `get` script pointing to `main` instead of `master` for retrieving the latest revision. ([#5707](https://github.com/cri-o/cri-o/pull/5707), [@saschagrunert](https://github.com/saschagrunert))
+ - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5775](https://github.com/cri-o/cri-o/pull/5775), [@manuelluis](https://github.com/manuelluis))
  - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
  - Forbid AppArmor profiles with the name `localhost/`. ([#5655](https://github.com/cri-o/cri-o/pull/5655), [@saschagrunert](https://github.com/saschagrunert))
 
