--- a/v1.23.2.md
+++ b/v1.23.2.md
@@ -11,16 +11,16 @@
 # CRI-O v1.23.2
 
 The release notes have been generated for the commit range
-[v1.23.1...9ef73d4](https://github.com/cri-o/cri-o/compare/v1.23.1...9ef73d481ff40291771d8428e7bcba09ae25acc8) on Wed, 30 Mar 2022 18:04:48 UTC.
+[v1.23.1...db0a1aa](https://github.com/cri-o/cri-o/compare/v1.23.1...db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e) on Fri, 08 Apr 2022 07:07:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz)
-- [cri-o.amd64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz.sha256sum)
-- [cri-o.arm64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz)
-- [cri-o.arm64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9ef73d481ff40291771d8428e7bcba09ae25acc8.tar.gz.sha256sum)
+- [cri-o.amd64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz)
+- [cri-o.amd64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz.sha256sum)
+- [cri-o.arm64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz)
+- [cri-o.arm64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.db0a1aaa6bb78f2260aa3d1f05a84c5fc469710e.tar.gz.sha256sum)
 
 ## Changelog since v1.23.1
 
@@ -29,6 +29,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5685](https://github.com/cri-o/cri-o/pull/5685), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix vm containers couldn't restore after cri-o restart ([#5633](https://github.com/cri-o/cri-o/pull/5633), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5792](https://github.com/cri-o/cri-o/pull/5792), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
