--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...9947b89](https://github.com/cri-o/cri-o/compare/v1.23.0...9947b89c9d1376be5584b5747853b134b7aefd5b) on Wed, 13 Apr 2022 20:29:28 UTC.
+[v1.23.0...149ccca](https://github.com/cri-o/cri-o/compare/v1.23.0...149cccaad772158d5908376aad3ee86e4e1ca4cf) on Thu, 14 Apr 2022 16:27:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz)
-- [cri-o.amd64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz.sha256sum)
-- [cri-o.arm64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz)
-- [cri-o.arm64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9947b89c9d1376be5584b5747853b134b7aefd5b.tar.gz.sha256sum)
+- [cri-o.amd64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz)
+- [cri-o.amd64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz.sha256sum)
+- [cri-o.arm64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz)
+- [cri-o.arm64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.149cccaad772158d5908376aad3ee86e4e1ca4cf.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -110,6 +110,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - src.elv.sh: fda6250
 
 ### Changed
+- github.com/BurntSushi/toml: [v0.4.1 → v1.1.0](https://github.com/BurntSushi/toml/compare/v0.4.1...v1.1.0)
 - github.com/anmitsu/go-shlex: [648efa6 → 38f4b40](https://github.com/anmitsu/go-shlex/compare/648efa6...38f4b40)
 - github.com/container-orchestrated-devices/container-device-interface: [f99e8b6 → e545712](https://github.com/container-orchestrated-devices/container-device-interface/compare/f99e8b6...e545712)
 - github.com/containernetworking/plugins: [v1.0.1 → v1.1.1](https://github.com/containernetworking/plugins/compare/v1.0.1...v1.1.1)
