Update release notes

--- a/v1.21.6.md
+++ b/v1.21.6.md
@@ -1,6 +1,8 @@
 - [CRI-O v1.21.6](#cri-o-v1216)
   - [Downloads](#downloads)
   - [Changelog since v1.21.5](#changelog-since-v1215)
+    - [Changes by Kind](#changes-by-kind)
+      - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
     - [Changed](#changed)
@@ -9,16 +11,21 @@
 # CRI-O v1.21.6
 
 The release notes have been generated for the commit range
-[v1.21.5...b948fcd](https://github.com/cri-o/cri-o/compare/v1.21.5...b948fcd95584228483667d78231e4c3cc24cf5e4) on Thu, 17 Mar 2022 15:33:21 UTC.
+[v1.21.5...19780ee](https://github.com/cri-o/cri-o/compare/v1.21.5...19780ee07b12a873d947453a0db70d03aaab7865) on Thu, 14 Apr 2022 18:34:21 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b948fcd95584228483667d78231e4c3cc24cf5e4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b948fcd95584228483667d78231e4c3cc24cf5e4.tar.gz)
-- [cri-o.arm64.b948fcd95584228483667d78231e4c3cc24cf5e4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b948fcd95584228483667d78231e4c3cc24cf5e4.tar.gz)
+- [cri-o.amd64.19780ee07b12a873d947453a0db70d03aaab7865.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.19780ee07b12a873d947453a0db70d03aaab7865.tar.gz)
+- [cri-o.arm64.19780ee07b12a873d947453a0db70d03aaab7865.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.19780ee07b12a873d947453a0db70d03aaab7865.tar.gz)
 
 ## Changelog since v1.21.5
+
+### Changes by Kind
+
+#### Uncategorized
+ - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5478](https://github.com/cri-o/cri-o/pull/5478), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
