--- a/v1.22.3.md
+++ b/v1.22.3.md
@@ -1,6 +1,8 @@
 - [CRI-O v1.22.3](#cri-o-v1223)
   - [Downloads](#downloads)
   - [Changelog since v1.22.2](#changelog-since-v1222)
+    - [Changes by Kind](#changes-by-kind)
+      - [Bug or Regression](#bug-or-regression)
   - [Dependencies](#dependencies)
     - [Added](#added)
     - [Changed](#changed)
@@ -9,16 +11,21 @@
 # CRI-O v1.22.3
 
 The release notes have been generated for the commit range
-[v1.22.2...28c5a70](https://github.com/cri-o/cri-o/compare/v1.22.2...28c5a70c54191439be819f75dc26a399344372e9) on Thu, 17 Mar 2022 11:41:15 UTC.
+[v1.22.2...c46200f](https://github.com/cri-o/cri-o/compare/v1.22.2...c46200f3acde3226118fdeac8daaecc1c9995248) on Tue, 19 Apr 2022 11:45:33 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.28c5a70c54191439be819f75dc26a399344372e9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.28c5a70c54191439be819f75dc26a399344372e9.tar.gz)
-- [cri-o.arm64.28c5a70c54191439be819f75dc26a399344372e9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.28c5a70c54191439be819f75dc26a399344372e9.tar.gz)
+- [cri-o.amd64.c46200f3acde3226118fdeac8daaecc1c9995248.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c46200f3acde3226118fdeac8daaecc1c9995248.tar.gz)
+- [cri-o.arm64.c46200f3acde3226118fdeac8daaecc1c9995248.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c46200f3acde3226118fdeac8daaecc1c9995248.tar.gz)
 
 ## Changelog since v1.22.2
+
+### Changes by Kind
+
+#### Bug or Regression
+ - Fix a segfault when multiple container stops come in for the same container ([#5803](https://github.com/cri-o/cri-o/pull/5803), [@haircommander](https://github.com/haircommander))
 
 ## Dependencies
 
