Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...9f1f420](https://github.com/cri-o/cri-o/compare/v1.23.0...9f1f420a7e18288d215abd479114b32350e3bbdd) on Thu, 21 Apr 2022 00:46:13 UTC.
+[v1.23.0...a9a4b7a](https://github.com/cri-o/cri-o/compare/v1.23.0...a9a4b7a1c025520b5bff8854c92296e994a34c14) on Thu, 21 Apr 2022 04:49:58 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz)
-- [cri-o.amd64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz.sha256sum)
-- [cri-o.arm64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz)
-- [cri-o.arm64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9f1f420a7e18288d215abd479114b32350e3bbdd.tar.gz.sha256sum)
+- [cri-o.amd64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz)
+- [cri-o.amd64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz.sha256sum)
+- [cri-o.arm64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz)
+- [cri-o.arm64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a9a4b7a1c025520b5bff8854c92296e994a34c14.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -75,6 +75,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
+ - Disable systemd-mode cgroup detection if /sys/fs/cgroup is bind mounted from the host ([#5778](https://github.com/cri-o/cri-o/pull/5778), [@harche](https://github.com/harche))
  - Inherits storage configs from storage.conf if crio config does not set. ([#5520](https://github.com/cri-o/cri-o/pull/5520), [@QiWang19](https://github.com/QiWang19))
  - Update go to 1.17 in go.mod ([#5577](https://github.com/cri-o/cri-o/pull/5577), [@QiWang19](https://github.com/QiWang19))
  - Updated default pause image to point to new location `registry.k8s.io/pause:3.6` ([#5777](https://github.com/cri-o/cri-o/pull/5777), [@ameukam](https://github.com/ameukam))
