--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...85626da](https://github.com/cri-o/cri-o/compare/v1.23.0...85626da8e03d8abee7a54a9a2ac9b489de21f312) on Thu, 21 Apr 2022 09:23:20 UTC.
+[v1.23.0...75acffa](https://github.com/cri-o/cri-o/compare/v1.23.0...75acffa1ea00208eef2185bf852a79ad15146072) on Thu, 21 Apr 2022 16:06:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz)
-- [cri-o.amd64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz.sha256sum)
-- [cri-o.arm64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz)
-- [cri-o.arm64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.85626da8e03d8abee7a54a9a2ac9b489de21f312.tar.gz.sha256sum)
+- [cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz)
+- [cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum)
+- [cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz)
+- [cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -57,6 +57,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
+ - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5769](https://github.com/cri-o/cri-o/pull/5769), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
  - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5673](https://github.com/cri-o/cri-o/pull/5673), [@haircommander](https://github.com/haircommander))
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
