Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...75acffa](https://github.com/cri-o/cri-o/compare/v1.23.0...75acffa1ea00208eef2185bf852a79ad15146072) on Thu, 21 Apr 2022 16:06:10 UTC.
+[v1.23.0...2aae963](https://github.com/cri-o/cri-o/compare/v1.23.0...2aae9632876b0df4fba49e4229d7239a168a097c) on Thu, 21 Apr 2022 23:57:54 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz)
-- [cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum)
-- [cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz)
-- [cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.75acffa1ea00208eef2185bf852a79ad15146072.tar.gz.sha256sum)
+- [cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz)
+- [cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum)
+- [cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz)
+- [cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -115,7 +115,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ### Changed
 - github.com/BurntSushi/toml: [v0.4.1 → v1.1.0](https://github.com/BurntSushi/toml/compare/v0.4.1...v1.1.0)
 - github.com/anmitsu/go-shlex: [648efa6 → 38f4b40](https://github.com/anmitsu/go-shlex/compare/648efa6...38f4b40)
-- github.com/container-orchestrated-devices/container-device-interface: [f99e8b6 → e545712](https://github.com/container-orchestrated-devices/container-device-interface/compare/f99e8b6...e545712)
+- github.com/container-orchestrated-devices/container-device-interface: [f99e8b6 → v0.3.2](https://github.com/container-orchestrated-devices/container-device-interface/compare/f99e8b6...v0.3.2)
 - github.com/containernetworking/plugins: [v1.0.1 → v1.1.1](https://github.com/containernetworking/plugins/compare/v1.0.1...v1.1.1)
 - github.com/containers/image/v5: [v5.16.1 → v5.17.0](https://github.com/containers/image/v5/compare/v5.16.1...v5.17.0)
 - github.com/cri-o/ocicni: [b388448 → v0.3.0](https://github.com/cri-o/ocicni/compare/b388448...v0.3.0)
