Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...2aae963](https://github.com/cri-o/cri-o/compare/v1.23.0...2aae9632876b0df4fba49e4229d7239a168a097c) on Fri, 22 Apr 2022 00:00:01 UTC.
+[v1.23.0...a68a720](https://github.com/cri-o/cri-o/compare/v1.23.0...a68a72071e5004be78fe2b1b98cb3bfa0e51b74b) on Fri, 22 Apr 2022 19:38:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz)
-- [cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum)
-- [cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz)
-- [cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2aae9632876b0df4fba49e4229d7239a168a097c.tar.gz.sha256sum)
+- [cri-o.amd64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz)
+- [cri-o.amd64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz.sha256sum)
+- [cri-o.arm64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz)
+- [cri-o.arm64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a68a72071e5004be78fe2b1b98cb3bfa0e51b74b.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -58,6 +58,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5769](https://github.com/cri-o/cri-o/pull/5769), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5800](https://github.com/cri-o/cri-o/pull/5800), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
  - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5673](https://github.com/cri-o/cri-o/pull/5673), [@haircommander](https://github.com/haircommander))
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
