Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...2884416](https://github.com/cri-o/cri-o/compare/v1.23.0...2884416939e9d6e8dc3f4eed0032a59b1b455c56) on Tue, 26 Apr 2022 08:52:12 UTC.
+[v1.23.0...6b64b6e](https://github.com/cri-o/cri-o/compare/v1.23.0...6b64b6e115fb2282e0f59f49217e46c718c08e75) on Wed, 27 Apr 2022 00:10:48 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz)
-- [cri-o.amd64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz.sha256sum)
-- [cri-o.arm64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz)
-- [cri-o.arm64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2884416939e9d6e8dc3f4eed0032a59b1b455c56.tar.gz.sha256sum)
+- [cri-o.amd64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz)
+- [cri-o.amd64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz.sha256sum)
+- [cri-o.arm64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz)
+- [cri-o.arm64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6b64b6e115fb2282e0f59f49217e46c718c08e75.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -57,6 +57,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
+ - Crio no longer requires the conntrack binary ([#5811](https://github.com/cri-o/cri-o/pull/5811), [@aojea](https://github.com/aojea))
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5769](https://github.com/cri-o/cri-o/pull/5769), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5800](https://github.com/cri-o/cri-o/pull/5800), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
