--- a/v1.23.2.md
+++ b/v1.23.2.md
@@ -11,22 +11,23 @@
 # CRI-O v1.23.2
 
 The release notes have been generated for the commit range
-[v1.23.1...8ad5d25](https://github.com/cri-o/cri-o/compare/v1.23.1...8ad5d25214037eb3479a52270a28112c1dd7d536) on Tue, 26 Apr 2022 09:03:40 UTC.
+[v1.23.1...526d7a7](https://github.com/cri-o/cri-o/compare/v1.23.1...526d7a7a66078d527d0e5d8f1a8070b869c4200b) on Wed, 27 Apr 2022 08:19:06 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz)
-- [cri-o.amd64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz.sha256sum)
-- [cri-o.arm64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz)
-- [cri-o.arm64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8ad5d25214037eb3479a52270a28112c1dd7d536.tar.gz.sha256sum)
+- [cri-o.amd64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz)
+- [cri-o.amd64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz.sha256sum)
+- [cri-o.arm64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz)
+- [cri-o.arm64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.526d7a7a66078d527d0e5d8f1a8070b869c4200b.tar.gz.sha256sum)
 
 ## Changelog since v1.23.1
 
 ### Changes by Kind
 
 #### Uncategorized
+ - Disable systemd-mode cgroup detection if /sys/fs/cgroup is bind mounted from the host ([#5815](https://github.com/cri-o/cri-o/pull/5815), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5817](https://github.com/cri-o/cri-o/pull/5817), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5685](https://github.com/cri-o/cri-o/pull/5685), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when multiple container stops come in for the same container ([#5782](https://github.com/cri-o/cri-o/pull/5782), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
