--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...af4c8ed](https://github.com/cri-o/cri-o/compare/v1.23.0...af4c8ed90cdde708e19a94bc1fe0db7fdf628756) on Wed, 27 Apr 2022 05:18:31 UTC.
+[v1.23.0...63f072d](https://github.com/cri-o/cri-o/compare/v1.23.0...63f072d5244765f1af8e189cbf77d8ba8a22b438) on Thu, 28 Apr 2022 00:35:34 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz)
-- [cri-o.amd64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz.sha256sum)
-- [cri-o.arm64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz)
-- [cri-o.arm64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.af4c8ed90cdde708e19a94bc1fe0db7fdf628756.tar.gz.sha256sum)
+- [cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz)
+- [cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum)
+- [cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz)
+- [cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -69,6 +69,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix an issue where protobuf panics when serializing ListContainer and ListPodSandbox calls ([#5606](https://github.com/cri-o/cri-o/pull/5606), [@haircommander](https://github.com/haircommander))
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
  - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
+ - Fix filesystem stats on zfs driver. ([#5821](https://github.com/cri-o/cri-o/pull/5821), [@cnfatal](https://github.com/cnfatal))
  - Fix vm containers couldn't restore after cri-o restart ([#5574](https://github.com/cri-o/cri-o/pull/5574), [@gozssky](https://github.com/gozssky))
  - Fix zsh completion generation. ([#5586](https://github.com/cri-o/cri-o/pull/5586), [@klihub](https://github.com/klihub))
  - Fixed `get` script pointing to `main` instead of `master` for retrieving the latest revision. ([#5707](https://github.com/cri-o/cri-o/pull/5707), [@saschagrunert](https://github.com/saschagrunert))
