--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...63f072d](https://github.com/cri-o/cri-o/compare/v1.23.0...63f072d5244765f1af8e189cbf77d8ba8a22b438) on Thu, 28 Apr 2022 00:36:57 UTC.
+[v1.23.0...761c2c1](https://github.com/cri-o/cri-o/compare/v1.23.0...761c2c137c1454ad4817a3b95bc4c3f1ff41d594) on Thu, 28 Apr 2022 13:38:17 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz)
-- [cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum)
-- [cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz)
-- [cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.63f072d5244765f1af8e189cbf77d8ba8a22b438.tar.gz.sha256sum)
+- [cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz)
+- [cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum)
+- [cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz)
+- [cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -76,6 +76,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5775](https://github.com/cri-o/cri-o/pull/5775), [@manuelluis](https://github.com/manuelluis))
  - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
  - Forbid AppArmor profiles with the name `localhost/`. ([#5655](https://github.com/cri-o/cri-o/pull/5655), [@saschagrunert](https://github.com/saschagrunert))
+ - Libcni: handle empty version when parsing version (https://github.com/containernetworking/cni/pull/893). Without this, Delete failed for empty-version configs, which was a regression from v0.8.0. ([#5830](https://github.com/cri-o/cri-o/pull/5830), [@aojea](https://github.com/aojea))
 
 #### Uncategorized
  - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
@@ -101,7 +102,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/kaey/framebuffer: [7b38548](https://github.com/kaey/framebuffer/tree/7b38548)
 - github.com/mattn/go-tty: [v0.0.3](https://github.com/mattn/go-tty/tree/v0.0.3)
 - github.com/networkplumbing/go-nft: [v0.2.0](https://github.com/networkplumbing/go-nft/tree/v0.2.0)
-- github.com/onsi/ginkgo/v2: [v2.1.3](https://github.com/onsi/ginkgo/v2/tree/v2.1.3)
+- github.com/onsi/ginkgo/v2: [v2.1.4](https://github.com/onsi/ginkgo/v2/tree/v2.1.4)
 - github.com/orangecms/go-framebuffer: [a0700d9](https://github.com/orangecms/go-framebuffer/tree/a0700d9)
 - github.com/pborman/getopt/v2: [v2.1.0](https://github.com/pborman/getopt/v2/tree/v2.1.0)
 - github.com/pkg/term: [v1.2.0-beta.2](https://github.com/pkg/term/tree/v1.2.0-beta.2)
@@ -119,11 +120,13 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/BurntSushi/toml: [v0.4.1 → v1.1.0](https://github.com/BurntSushi/toml/compare/v0.4.1...v1.1.0)
 - github.com/anmitsu/go-shlex: [648efa6 → 38f4b40](https://github.com/anmitsu/go-shlex/compare/648efa6...38f4b40)
 - github.com/container-orchestrated-devices/container-device-interface: [f99e8b6 → v0.3.2](https://github.com/container-orchestrated-devices/container-device-interface/compare/f99e8b6...v0.3.2)
+- github.com/containernetworking/cni: [v1.0.1 → v1.1.0](https://github.com/containernetworking/cni/compare/v1.0.1...v1.1.0)
 - github.com/containernetworking/plugins: [v1.0.1 → v1.1.1](https://github.com/containernetworking/plugins/compare/v1.0.1...v1.1.1)
 - github.com/containers/image/v5: [v5.16.1 → v5.17.0](https://github.com/containers/image/v5/compare/v5.16.1...v5.17.0)
-- github.com/cri-o/ocicni: [b388448 → v0.3.0](https://github.com/cri-o/ocicni/compare/b388448...v0.3.0)
+- github.com/cri-o/ocicni: [b388448 → v0.3.1](https://github.com/cri-o/ocicni/compare/b388448...v0.3.1)
 - github.com/docker/docker: [v20.10.9+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.9...v20.10.11)
 - github.com/frankban/quicktest: [v1.11.3 → v1.13.1](https://github.com/frankban/quicktest/compare/v1.11.3...v1.13.1)
+- github.com/fsnotify/fsnotify: [v1.5.1 → v1.5.4](https://github.com/fsnotify/fsnotify/compare/v1.5.1...v1.5.4)
 - github.com/go-logr/logr: [v1.2.0 → v1.2.1](https://github.com/go-logr/logr/compare/v1.2.0...v1.2.1)
 - github.com/google/pprof: [cbba55b → 94a9f03](https://github.com/google/pprof/compare/cbba55b...94a9f03)
 - github.com/insomniacslk/dhcp: [cc9239a → 7d93572](https://github.com/insomniacslk/dhcp/compare/cc9239a...7d93572)
@@ -135,13 +138,16 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/rogpeppe/go-internal: [v1.8.0 → 86f73c5](https://github.com/rogpeppe/go-internal/compare/v1.8.0...86f73c5)
 - github.com/u-root/u-root: [v7.0.0+incompatible → d511ded](https://github.com/u-root/u-root/compare/v7.0.0...d511ded)
 - github.com/vishvananda/netlink: [e1a867c → 650dca9](https://github.com/vishvananda/netlink/compare/e1a867c...650dca9)
+- github.com/yuin/goldmark: [v1.4.0 → v1.4.1](https://github.com/yuin/goldmark/compare/v1.4.0...v1.4.1)
 - go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.26.1 → v0.28.0
 - go.opentelemetry.io/otel/trace: v1.2.0 → v1.3.0
 - go.opentelemetry.io/otel: v1.2.0 → v1.3.0
-- golang.org/x/mod: v0.4.2 → v0.5.1
+- golang.org/x/crypto: 32db794 → 089bfa5
+- golang.org/x/mod: v0.4.2 → 9b9b3d8
 - golang.org/x/net: e898025 → 27dd868
-- golang.org/x/sys: 751e447 → 1d35b9e
+- golang.org/x/sys: 751e447 → 33da011
 - golang.org/x/term: 6886f2d → 03fcf44
+- golang.org/x/tools: d4cc65f → v0.1.10
 - google.golang.org/grpc: v1.42.0 → v1.43.0
 - mvdan.cc/sh/v3: v3.3.1 → v3.4.3
 
