Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...40cdd9c](https://github.com/cri-o/cri-o/compare/v1.23.0...40cdd9c2d97384eb5601c1af28e7092cdda3815e) on Thu, 28 Apr 2022 22:49:24 UTC.
+[v1.23.0...fa99402](https://github.com/cri-o/cri-o/compare/v1.23.0...fa994025276072c930e99c7bff91a675f9cb8e66) on Fri, 29 Apr 2022 19:45:41 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz)
-- [cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum)
-- [cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz)
-- [cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum)
+- [cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz)
+- [cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum)
+- [cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz)
+- [cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -52,6 +52,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Feature
  - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
+ - Add pause and unpause to the CRI-O HTTP API, allowing programs with access to the crio.sock to pause containers ([#5797](https://github.com/cri-o/cri-o/pull/5797), [@jwcesign](https://github.com/jwcesign))
  - Automatically `chcon` and `restorecon` on get script for SELinux enabled distributions. ([#5711](https://github.com/cri-o/cri-o/pull/5711), [@saschagrunert](https://github.com/saschagrunert))
  - Implement CDI device injection: extract the names of requested CDI devices and update
   the OCI Spec according to the corresponding CDI device specifications. Please refer to
