Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...c17baa0](https://github.com/cri-o/cri-o/compare/v1.23.0...c17baa0dd7701bfd9bed58cb24aef39c1c125cc0) on Mon, 02 May 2022 17:59:37 UTC.
+[v1.23.0...d45c5d3](https://github.com/cri-o/cri-o/compare/v1.23.0...d45c5d3e60895b7607e51e4ba46b58126746435c) on Thu, 05 May 2022 07:01:34 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz)
-- [cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum)
-- [cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz)
-- [cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum)
+- [cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz)
+- [cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum)
+- [cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz)
+- [cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -44,6 +44,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Mark --pids-limit and --log-size-max options as deprecated, as well as set the default pids-limit to unlimited. Users should migrate to using the Kubelet's flags --pod-pids-limit and --container-log-max-size respectively. ([#5831](https://github.com/cri-o/cri-o/pull/5831), [@haircommander](https://github.com/haircommander))
 
 #### API Change
+ - Block containers without CAP_SYS_ADMIN on `unshare` syscall in the default seccomp profile, to better contain unprivileged container processes. ([#5788](https://github.com/cri-o/cri-o/pull/5788), [@haircommander](https://github.com/haircommander))
  - Enable `--seccomp-use-default-when-empty`/`seccomp_use_default_when_empty` by default.
   This is a premature step before the graduation of the `seccompDefault` feature planned for
   Kubernetes v1.25. We now use the `runtime/default` profile for every workload specifying 
