Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...d45c5d3](https://github.com/cri-o/cri-o/compare/v1.23.0...d45c5d3e60895b7607e51e4ba46b58126746435c) on Thu, 05 May 2022 07:03:07 UTC.
+[v1.23.0...34654ec](https://github.com/cri-o/cri-o/compare/v1.23.0...34654ec32dd6800c99b280954deff80e3b7a552e) on Thu, 05 May 2022 09:27:34 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz)
-- [cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum)
-- [cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz)
-- [cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d45c5d3e60895b7607e51e4ba46b58126746435c.tar.gz.sha256sum)
+- [cri-o.amd64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz)
+- [cri-o.amd64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz.sha256sum)
+- [cri-o.arm64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz)
+- [cri-o.arm64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.34654ec32dd6800c99b280954deff80e3b7a552e.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -41,6 +41,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
 
 #### Deprecation
+ - Deprecate `conmon`, `conmon-cgroup`, and `conmon-env` config options in favor of runtime handler specific fields `monitor-path`, `monitor-cgroup`, and `monitor-env` ([#5823](https://github.com/cri-o/cri-o/pull/5823), [@haircommander](https://github.com/haircommander))
  - Mark --pids-limit and --log-size-max options as deprecated, as well as set the default pids-limit to unlimited. Users should migrate to using the Kubelet's flags --pod-pids-limit and --container-log-max-size respectively. ([#5831](https://github.com/cri-o/cri-o/pull/5831), [@haircommander](https://github.com/haircommander))
 
 #### API Change
