Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...231af70](https://github.com/cri-o/cri-o/compare/v1.23.0...231af7093b86c0dcd0828d9045e8b87bf20ed78e) on Fri, 06 May 2022 16:03:58 UTC.
+[v1.23.0...bd44e1a](https://github.com/cri-o/cri-o/compare/v1.23.0...bd44e1af2108311f0b76da75c020f002b13c4fff) on Mon, 09 May 2022 09:22:08 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz)
-- [cri-o.amd64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz.sha256sum)
-- [cri-o.arm64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz)
-- [cri-o.arm64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.231af7093b86c0dcd0828d9045e8b87bf20ed78e.tar.gz.sha256sum)
+- [cri-o.amd64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz)
+- [cri-o.amd64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz.sha256sum)
+- [cri-o.arm64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz)
+- [cri-o.arm64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bd44e1af2108311f0b76da75c020f002b13c4fff.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -53,6 +53,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Feature
  - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
+ - Add experimental support for conmonrs, a redesign of conmon in rust. It should not be used in production. ([#5839](https://github.com/cri-o/cri-o/pull/5839), [@haircommander](https://github.com/haircommander))
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add pause and unpause to the CRI-O HTTP API, allowing programs with access to the crio.sock to pause containers ([#5797](https://github.com/cri-o/cri-o/pull/5797), [@jwcesign](https://github.com/jwcesign))
  - Automatically `chcon` and `restorecon` on get script for SELinux enabled distributions. ([#5711](https://github.com/cri-o/cri-o/pull/5711), [@saschagrunert](https://github.com/saschagrunert))
@@ -97,8 +98,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
+- capnproto.org/go/capnp/v3: 7329fad
 - github.com/beevik/ntp: [v0.3.0](https://github.com/beevik/ntp/tree/v0.3.0)
 - github.com/c-bata/go-prompt: [v0.2.6](https://github.com/c-bata/go-prompt/tree/v0.2.6)
+- github.com/containers/conmon-rs: [7d0ae00](https://github.com/containers/conmon-rs/tree/7d0ae00)
 - github.com/go-logr/stdr: [v1.2.0](https://github.com/go-logr/stdr/tree/v1.2.0)
 - github.com/gojuno/minimock/v3: [v3.0.8](https://github.com/gojuno/minimock/v3/tree/v3.0.8)
 - github.com/google/go-tpm-tools: [1614c14](https://github.com/google/go-tpm-tools/tree/1614c14)
@@ -108,14 +111,17 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/hexdigest/gowrap: [v1.1.8](https://github.com/hexdigest/gowrap/tree/v1.1.8)
 - github.com/intel-go/cpuid: [2aa7292](https://github.com/intel-go/cpuid/tree/2aa7292)
 - github.com/kaey/framebuffer: [7b38548](https://github.com/kaey/framebuffer/tree/7b38548)
+- github.com/kylelemons/godebug: [v1.1.0](https://github.com/kylelemons/godebug/tree/v1.1.0)
 - github.com/mattn/go-tty: [v0.0.3](https://github.com/mattn/go-tty/tree/v0.0.3)
 - github.com/networkplumbing/go-nft: [v0.2.0](https://github.com/networkplumbing/go-nft/tree/v0.2.0)
 - github.com/onsi/ginkgo/v2: [v2.1.4](https://github.com/onsi/ginkgo/v2/tree/v2.1.4)
 - github.com/orangecms/go-framebuffer: [a0700d9](https://github.com/orangecms/go-framebuffer/tree/a0700d9)
 - github.com/pborman/getopt/v2: [v2.1.0](https://github.com/pborman/getopt/v2/tree/v2.1.0)
+- github.com/philhofer/fwd: [v1.1.1](https://github.com/philhofer/fwd/tree/v1.1.1)
 - github.com/pkg/term: [v1.2.0-beta.2](https://github.com/pkg/term/tree/v1.2.0-beta.2)
 - github.com/rck/unit: [v0.0.3](https://github.com/rck/unit/tree/v0.0.3)
 - github.com/rekby/gpt: [a930afb](https://github.com/rekby/gpt/tree/a930afb)
+- github.com/tinylib/msgp: [v1.1.5](https://github.com/tinylib/msgp/tree/v1.1.5)
 - github.com/twitchtv/twirp: [v5.8.0+incompatible](https://github.com/twitchtv/twirp/tree/v5.8.0)
 - github.com/u-root/gobusybox/src: [4e2fbb8](https://github.com/u-root/gobusybox/src/tree/4e2fbb8)
 - github.com/u-root/iscsinl: [84c3264](https://github.com/u-root/iscsinl/tree/84c3264)
